Jdbc join and aop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url = jdbc:mysql://localhost:3306/apmjdbcdb
 # Username and password
 spring.datasource.username = root
 spring.datasource.password = jesus
+
+server.port=8686
